# automation_tools

./: .dockerignore  .env.example  .env_bkp  .env_sample  .gitignore  .goreleaser.yaml  AZURE_CONNECTIVITY_FIX.md  CLAUDE.md  Dockerfile  Dockerfile.server  GIT_COMMIT_WORKFLOW.md  IMPLEMENTATION_COMPLETE.md  KNOWN_ISSUES.md  LICENSE  LOCAL_SETUP.md  Makefile  PERSONALIZATION_AGENT_PROGRESS.md  PERSONALIZED_AI_ARCHITECTURE.md  PERSONALIZED_AI_COMPLETE.md  PERSONALIZED_AI_FINAL_SUMMARY.md  PERSONALIZED_AI_QUICKSTART.md  PHASE2_COMPLETE.md  PHASE3-5_COMPLETE.md  PULL_REQUEST_TEMPLATE.md  ProjectGuide.markdown  QUICK_REFERENCE.md  README.md  Roadmap.md  SCRIPTS_CREATED_SUMMARY.md  SESSION_SUMMARY.md  TERMS.md  TESTING_REPORT.md  TechnicalArchitecture.markdown  USAGE_GUIDE.md  claude_conv.txt  devtrack-git-wrapper.sh  devtrack-wrapper.bat  devtrack-wrapper.ps1  devtrack-wrapper.sh  docker-compose.yml  (+19 more)
backend/: __init__.py  alert_notifier.py  alert_poller.py  azure_api.py  backlog_manager.py  commit_message_enhancer.py  config.py  conflict_auto_resolver.py  daily_report_generator.py  data_collectors.py  description_enhancer.py  email_reporter.py  git_diff_analyzer.py  ipc_client.py  learning_integration.py  license_manager.py  log_work.py  nlp_parser.py  personalization.py  personalized_ai.py  pm_agent.py  project_manager.py  run_daily_learning.py  task_matcher.py  telemetry.py  ticket_picker.py  user_prompt.py  webhook_handlers.py  webhook_notifier.py  webhook_server.py  work_update_enhancer.py  workspace_router.py
demo/: DEMO_NOTES.md  inject_alerts.py  reset.sh  run_demo.sh  setup.sh
devtrack/: cli.go  config.go  config_env.go  daemon.go  database.go  git_monitor.go  go.mod  ipc.go  learning.go  styles.go
devtrack-bin/: cli.go  cli_vacation.go  cli_work.go  cli_workspace.go  cloud.go  config.go  config_env.go  daemon.go  database.go  deferred_commit.go  demo.go  deps.go  fs_watcher.go  git_monitor.go  go.mod  go.sum  health.go  http_trigger.go  http_trigger_test.go  integrated.go  ipc.go  learning.go  license.go  loadenv.go  main.go  ping.go  queue.go  scheduler.go  server_config.go  setup.go  test_manual_triggers.sh  tls_cert.go  tui.go  tui_activity.go  tui_alerts.go  tui_overview.go  tui_workspaces.go  version.go
docs/: ADVANCED_FEATURES.md  ARCHITECTURE.md  AUTOSTART.md  AZURE_DEVOPS.md  CLI_REFERENCE.md  COMMIT_WORKFLOW_DESIGN.md  COMPLETION.md  CONFIGURATION.md  GETTING_STARTED.md  GITHUB.md  GITLAB.md  GIT_FEATURES.md  GIT_SAGE.md  IMPLEMENTATION_PLAN.md  INDEX.md  INSTALLATION.md  LAUNCH_STRATEGY.md  LLM_GUIDE.md  LLM_STRATEGY.md  MACOS_AUTOSTART.md  MULTI_REPO.md  OFFLINE_RESILIENCE.md  PERSONALIZATION.md  PHASES.md  PHASES_1_2.md  PHASE_3.md  PHASE_4.md  PM_AGENT.md  PROJECT_PLANNING.md  (+13 more)
(+259 files in other folders)
